# Ogorod

./: .gitignore  After_refactoring_imaiorov.cpp  README.md
MP/: build.sh  build2.sh
MP/projects/: CMakeLists.txt
MP/projects/dz2.sort/: CMakeLists.txt  sort.hpp
MP/projects/dz2.sort/src/: CMakeLists.txt  main.cpp  sort.cpp  sort.hpp
MP/projects/dz2.sort/test/: CMakeLists.txt  test_merge.cpp
MP/projects/dz3.Obuchalkaa/: CMakeLists.txt  menu.cpp  menu_items.hpp
MP/projects/dz4.long_number/: CMakeLists.txt
MP/projects/dz4.long_number/long_number/: CMakeLists.txt  long_number.cpp  long_number.hpp
MP/projects/dz4.long_number/tests/: CMakeLists.txt  test_long_number.cpp
MP/projects/dz5.vector_list/: CMakeLists.txt
MP/projects/dz5.vector_list/include/: doubly_linked_list.hpp  vector.hpp
MP/projects/dz5.vector_list/src/: doubly_linked_list.cpp  vector.cpp
MP/projects/dz5.vector_list/templates/: templates_vector.cpp
MP/projects/dz5.vector_list/tests/: test_list.cpp
Obuchalkaa/: menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.hpp  obuchalka  obuchalka.cpp  oo  oo2  oo3  oo4
dz1. refactoring/: before_refactoring_imaiorov (1).cpp
dz2. sort/: sort.cpp
dz2.sort/: main.cpp  sort.cpp
dz3. Obuchalkaa/: menu_functions.hpp  menu_items.cpp  obuchalka.cpp
dz3.Obuchalkaa/: menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
dz4.Mario/: build.sh  m1  mari.c  super_mario  super_mario.c  test
sort/: main.cpp
